--- a/examples/multiple/CMakeLists.txt
+++ b/examples/multiple/CMakeLists.txt
@@ -3,8 +3,8 @@ if (ANDROID)
 else()
     add_executable(qt_imgui_demo_widgets demo-widgets.cpp)
 endif()
-target_link_libraries(qt_imgui_demo_widgets PRIVATE qt_imgui_widgets)
-target_link_libraries(qt_imgui_demo_widgets PRIVATE implot)
+target_link_libraries(qt_imgui_demo_widgets PRIVATE qtImgui)
+# target_link_libraries(qt_imgui_demo_widgets PRIVATE implot)
 
 if(ANDROID)
     include(${CMAKE_CURRENT_LIST_DIR}/../../tools/qt-android-cmake/AddQtAndroidApk.cmake)
