--- a/examples/window/CMakeLists.txt
+++ b/examples/window/CMakeLists.txt
@@ -3,7 +3,7 @@ if (ANDROID)
 else()
   add_executable(qt_imgui_demo_window demo-window.cpp)
 endif()
-target_link_libraries(qt_imgui_demo_window  PRIVATE qt_imgui_quick)
+target_link_libraries(qt_imgui_demo_window  PRIVATE qtImgui)
 
 if(ANDROID)
     include(${CMAKE_CURRENT_LIST_DIR}/../../tools/qt-android-cmake/AddQtAndroidApk.cmake)
